--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@inertiajs/inertia": "^0.8.5",
         "@inertiajs/inertia-vue3": "^0.3.5",
         "@inertiajs/progress": "^0.2.4",
+        "@tailwindcss/forms": "^0.3.2",
         "vue": "^3.0.7"
     }
 }
